--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="../currentportfolio/textindex.html">About<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="../currentportfolio/index.html">About<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="../currentportfolio/portfolio.html">Portfolio</a>
       <a class="nav-item nav-link" href="../currentportfolio/contact.html">Contact</a>
       <!--<a class="nav-item nav-link disabled" href="#"></a>-->
