adding interactive hangman link

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../currentportfolio/style.css">
 	</head>
-	
+
 	<body>
 		<header>
 			<!--header of page-->
@@ -61,21 +61,21 @@
 				<h3>The Nitty Gritty</h3>
 					<p>I am a twin. I am originally from Tennessee. I love to read--any book, any time. I enjoy anything fine arts. I wish the Obamas adopted me as their third daughter. I love water more than any other drink on the world. I love learning things. I always ask questions.</p>
 			</div>
-          
+
 
 
 		</div>
 
 		<div class="row">
 		<div class="col-md-5">
-				<h3>Forms + Inputs</h3>
-				<a href="https://github.com/camckin10/signup" target="_blank">
-  				<img width="150" height="150" border="0" class="rounded-circle"  src="../currentportfolio/images/contactform.jpg"/>
+				<h3>Interactive Hangman Game</h3>
+				<a href="https://github.com/camckin10/AdvJS" target="_blank">
+  				<img width="150" height="150" border="0" class="rounded-circle"  src="../currentportfolio/images/letters.jpg"/>
                 </a>
-                <p>This assignment was one of my first dealing with forms, legends, and inputs. I loved making different 'contact' forms. Hopefully, in the future, I look forward to learning more about forms! Languages used: HTML5/CSS3</p>
+                <p>This assignment, we created an interactive Hangmang Game using back end technologies. Languages used: JavaScript and Node.js</p>
 
 					<!--<p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png" target="_blank;" width="150px;" height="150px;" class="rounded-circle"</p>-->
-				
+
 			</div>
 
 			<br>
@@ -84,10 +84,10 @@
 				<h3>Fresh Prince of Bel-Air</h3>
 					<a href="https://github.com/camckin10/freshprince" target="_blank">
   				<img width="150" height="150" border="0" class="rounded-circle"  src="../currentportfolio/images/stein-fresh-prince.png"/>
-                </a>	
+                </a>
                 <p>For this assignment, I created one of my first Github repositories. I created a repo on Github with only the lyrics of the Fresh Prince of Bel-Air theme song. It was not a serious assignment, but I did love how the assignment chose something cool! Languages used: HTML5 </p>
 			</div>
-			
+
 			<br>
 
 			<div class="col-sm-2">
@@ -131,7 +131,7 @@
 </main>
 
 
-	
+
 
 
 
@@ -148,6 +148,3 @@
 </body>
 
 </html>
-
-
-
