pushing new change to portfolio section of site

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,122 +1,125 @@
 <!DOCTYPE html>
-	<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Portfolio</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="../currentportfolio/style.css">
-	</head>
+<html lang="en">
 
-	<body>
-		<header>
-			<!--header of page-->
-			<!--will also add nav bar-->
+<head>
+    <meta charset="UTF-8">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../currentportfolio/style.css">
+</head>
+
+<body>
+    <header>
+        <!--header of page-->
+        <!--will also add nav bar-->
 
 
-			<!--nav bar is not active! How to make it active??-->
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <!--nav bar is not active! How to make it active??-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="../currentportfolio/index.html">About<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="../currentportfolio/portfolio.html">Portfolio</a>
-      <a class="nav-item nav-link" href="../currentportfolio/contact.html">Contact</a>
-      <!--<a class="nav-item nav-link disabled" href="#"></a>-->
-    </div>
-  </div>
-</nav>
-		<div class="jumbotron">
-		<h1 class="text-center">Chelsey Alana McKinney</h1>
-		<p class="lead text-center">I'm a Professional that I am.</p>
-	</div>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="../currentportfolio/index.html">About<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="../currentportfolio/portfolio.html">Portfolio</a>
+                    <a class="nav-item nav-link" href="../currentportfolio/contact.html">Contact</a>
+                    <!--<a class="nav-item nav-link disabled" href="#"></a>-->
+                </div>
+            </div>
+        </nav>
+        <div class="jumbotron">
+            <h1 class="text-center">Chelsey Alana McKinney</h1>
+            <p class="lead text-center">I'm a Professional that I am.</p>
+        </div>
 
-</header>
+    </header>
 
-<!--section to put main content on page-->
-<main role="main" class="container">
-	<div class="row">
-		<div class="col-md-5">
-				<h3>Train Scheduler</h3>
-					<a href="https://camckin10.github.io/trainschedule/." target="_blank">
-  				<img width="150" height="150" border="0" class="rounded-circle"  src="../currentportfolio/images/train.jpg"/></a>
-  				<p>For this project, we created a train scheduler app that would log any train entries from the user. Languages/Libraries used: HTML5/CSS3, Javascript, jQuery, Bootstrap, and Firebase</p>
-			</div>
+    <!--section to put main content on page-->
+    <main role="main" class="container">
+        <div class="row">
+            <div class="col-md-5">
+                <h3>Train Scheduler</h3>
+                <a href="https://camckin10.github.io/trainschedule/." target="_blank">
+                    <img width="150" height="150" border="0" class="rounded-circle" src="../currentportfolio/images/train.jpg" /></a>
+                <p>For this project, we created a train scheduler app that would log any train entries from the user. Languages/Libraries used: HTML5/CSS3, Javascript, jQuery, Bootstrap, and Firebase</p>
+            </div>
 
-			<div class="col-md-5">
-				<h3>Crystal Collector</h3>
-					<a href="https://camckin10.github.io/week-4-game/" target="_blank">
-  				<img width="150" height="150" border="0" class="rounded-circle"  src="../currentportfolio/images/jewel.jpg"/>
+            <div class="col-md-5">
+                <h3>Crystal Collector</h3>
+                <a href="https://camckin10.github.io/week-4-game/" target="_blank">
+                    <img width="150" height="150" border="0" class="rounded-circle" src="../currentportfolio/images/jewel.jpg" />
                 </a>
                 <p>For this assignment, we created a game where the user had to guess the correct amounts of each crystal. Languages/Libraries used: HTML5/CSS3, Bootstrap, Javascript, and Jquery. </p>
-			</div>
+            </div>
 
 
-			   <!--use this col-6 col-lg-4 content for side bar content-->
-			   <!--code still does not have desired effect; testing reponsiveness, this side bar will appear below other projects because it is in the same row.-->
-			<div class="col-sm-2">
-				<h3>The Nitty Gritty</h3>
-					<p>I am a twin. I am originally from Tennessee. I love to read--any book, any time. I enjoy anything fine arts. I wish the Obamas adopted me as their third daughter. I love water more than any other drink on the world. I love learning things. I always ask questions.</p>
-			</div>
+            <!--use this col-6 col-lg-4 content for side bar content-->
+            <!--code still does not have desired effect; testing reponsiveness, this side bar will appear below other projects because it is in the same row.-->
+            <div class="col-sm-2">
+                <h3>The Nitty Gritty</h3>
+                <p>I am a twin. I am originally from Tennessee. I love to read--any book, any time. I enjoy anything fine arts. I wish the Obamas adopted me as their third daughter. I love water more than any other drink on the world. I love learning things.
+                    I always ask questions.</p>
+            </div>
 
 
 
-		</div>
+        </div>
 
-		<div class="row">
-		<div class="col-md-5">
-				<h3>Interactive Hangman Game</h3>
-				<a href="https://github.com/camckin10/AdvJS" target="_blank">
-  				<img width="150" height="150" border="0" class="rounded-circle"  src="../currentportfolio/images/letters.jpg"/>
+        <div class="row">
+            <div class="col-md-5">
+                <h3>Interactive Hangman Game</h3>
+                <a href="https://github.com/camckin10/AdvJS" target="_blank">
+                    <img width="150" height="150" border="0" class="rounded-circle" src="../currentportfolio/images/letters.jpg" />
                 </a>
                 <p>This assignment, we created an interactive Hangmang Game using back end technologies. Languages used: JavaScript and Node.js</p>
 
-					<!--<p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png" target="_blank;" width="150px;" height="150px;" class="rounded-circle"</p>-->
+                <!--<p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png" target="_blank;" width="150px;" height="150px;" class="rounded-circle"</p>-->
 
-			</div>
+            </div>
 
-			<br>
+            <br>
 
-			<div class="col-md-5">
-				<h3>Fresh Prince of Bel-Air</h3>
-					<a href="https://github.com/camckin10/freshprince" target="_blank">
-  				<img width="150" height="150" border="0" class="rounded-circle"  src="../currentportfolio/images/stein-fresh-prince.png"/>
+            <div class="col-md-5">
+                <h3>Bamazon</h3>
+                <a href="https://github.com/camckin10/bamazon" target="_blank">
+                    <img width="150" height="150" border="0" class="rounded-circle" src="../currentportfolio/images/stein-fresh-prince.png" />
                 </a>
-                <p>For this assignment, I created one of my first Github repositories. I created a repo on Github with only the lyrics of the Fresh Prince of Bel-Air theme song. It was not a serious assignment, but I did love how the assignment chose something cool! Languages used: HTML5 </p>
-			</div>
+                <p>For this assignment, I created an Amazon inspired store using back-end technologies. Technologies used:JavaScript,Node.js, and mySQL </p>
+            </div>
 
-			<br>
+            <br>
 
-			<div class="col-sm-2">
-					<p>Freegan chicharrones portland typewriter. Meditation swag literally chartreuse gluten-free. La croix affogato viral authentic distillery.</p>
-			</div>
+            <div class="col-sm-2">
+                <p>Freegan chicharrones portland typewriter. Meditation swag literally chartreuse gluten-free. La croix affogato viral authentic distillery.</p>
+            </div>
 
-   			<!--use this col-6 col-lg-4 content for side bar content-->
-   			<!--do not put content in this div class so as to leave blank like index.html and contact.html-->
-   			<!--<div class="col-6 col-lg-4"></div>
+            <!--use this col-6 col-lg-4 content for side bar content-->
+            <!--do not put content in this div class so as to leave blank like index.html and contact.html-->
+            <!--<div class="col-6 col-lg-4"></div>
 
 		</div>-->
 
 
-       <!--used this div class to test out the space on the page-->
-       <!--this div class will also not have any content to leave some space between other rows and footer
+            <!--used this div class to test out the space on the page-->
+            <!--this div class will also not have any content to leave some space between other rows and footer
 		<div class="row">
 		<div class="col-sm-8">
 				<h2>More Projects To Come</h2
 	      <div>-->
 
 
-		</div>   <!--closing div for main section of page-->
+        </div>
+        <!--closing div for main section of page-->
 
 
-         <!--not using code below for side bar content-->
-		<!--side bar content-->
-		<!--insert links to social media-->
-		<!--add social media icons>-->
-		<!--<aside class="col-sm-3 ml-sm-auto blog-sidebar">
+        <!--not using code below for side bar content-->
+        <!--side bar content-->
+        <!--insert links to social media-->
+        <!--add social media icons>-->
+        <!--<aside class="col-sm-3 ml-sm-auto blog-sidebar">
 	<div class="sidebar-module sidebar-module-inset">
 		<h4>The nitty gritty</h4>
 		<p>Freegan chicharrones portland typewriter. Meditation swag literally chartreuse gluten-free. La croix affogato viral authentic distillery. Lyft cardigan subway tile brooklyn butcher tote bag taiyaki gentrify dreamcatcher, kickstarter pork belly biodiesel pok pok. Kitsch shaman try-hard vaporware, schlitz blue bottle humblebrag. Four dollar toast brunch edison bulb, slow-carb VHS hot chicken locavore health goth art party flannel gochujang.</p>
@@ -127,8 +130,8 @@
 		</ul>
 	</div>
 </aside>-->
-	</div>
-</main>
+        </div>
+    </main>
 
 
 
@@ -136,14 +139,14 @@
 
 
 
-	<!--footer section-->
-<footer class="blog-footer" style="background:#D3D3D3; text-align:center;">
-	<p>This is where social media icons will be placed</p>
-	<!--insert socia media icons-->
-	<a href="#">Back To Top</a>
+    <!--footer section-->
+    <footer class="blog-footer" style="background:#D3D3D3; text-align:center;">
+        <p>This is where social media icons will be placed</p>
+        <!--insert socia media icons-->
+        <a href="#">Back To Top</a>
 
 
-</footer>
+    </footer>
 
 </body>
 
