change in image

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
             <div class="col-md-5">
                 <h3>Bamazon</h3>
                 <a href="https://github.com/camckin10/bamazon" target="_blank">
-                    <img width="150" height="150" border="0" class="rounded-circle" src="../currentportfolio/images/stein-fresh-prince.png" />
+                    <img width="150" height="150" border="0" class="rounded-circle" src="" />
                 </a>
                 <p>For this assignment, I created an Amazon inspired store using back-end technologies. Technologies used:JavaScript,Node.js, and mySQL </p>
             </div>
